# azugate

./: .gitignore  CIRCUIT_BREAKER_USAGE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  GRPC_INTEGRATION_FIXES.md  HTTP_CACHE_USAGE.md  LOAD_BALANCER_USAGE.md  METRICS_USAGE.md  PACKAGING.md  README.md  buf.gen.yaml  build.bash  config.default.yaml  docker-compose.yaml  install.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cross-platform.yml  linux-ci.yml  release.yml
Formula/: azugate.rb
debian/: azugate.service  changelog  control  copyright  postinst  prerm  rules
docs/: BUILD.README.md  BUILD_SCRIPT_README.md  CI_CD_OPTIMIZATION_GUIDE.md  LINUX_BUILD.md  WINDOWS_COMPATIBILITY_REPORT.md
frontend/: package-lock.json  package.json
frontend/src/app/: components.tsx  page.tsx
frontend/src/app/login/: page.tsx
grpc-proxy/: go.mod  main.go
grpc-proxy/api/: config_service.pb.go  config_service.pb.gw.go  config_service_grpc.pb.go
include/: circuit_breaker.hpp  common.h  common.hpp  compression.h  compression.hpp  config.h  config_manager.hpp  core.h  crequest.h  dispatcher.h  file_index.hpp  filter.h  http_cache.hpp  http_service.h  http_wrapper.hpp  load_balancer.hpp  metrics.hpp  network_wrapper.hpp  protocol_detector.h  protocols.h  rate_limiter.h  server.hpp  services.h  services.hpp  string_validator.h  worker.hpp
paper/: .~周梓健的论文.docx  周梓健的论文.docx
proto/: buf.gen.yaml  buf.yaml  config_service.proto
proto/api/v1/: config_service.proto
resources/: .gitignore  config.default.yaml  config.yaml  localhost.crt  localhost.key  myCA.crt  welcome.html
resources/go_simple_server/: main.go
resources/login/: global.css  interface.js  login.html
resources/py_proxy_test/: main.py  proxy_websocket.py  proxy_websocket_client.py  proxy_websocket_server.py  requirements.txt
resources/py_simple_server/: .gitignore
src/api/: config_service.cc  config_service.grpc.pb.cc  config_service.grpc.pb.h  config_service.h  config_service.hpp  config_service.pb.cc  config_service.pb.h
src/api/api/v1/: config_service.grpc.pb.cc  config_service.grpc.pb.h  config_service.pb.cc  config_service.pb.h
src/api/google/api/: annotations.grpc.pb.cc  annotations.grpc.pb.h  annotations.pb.cc  annotations.pb.h  http.grpc.pb.cc  http.grpc.pb.h  http.pb.cc  http.pb.h
src/app/: aio_send.cc  azugate.cc  azugate_.cc  io_perf.cc  perf.cc  sendfile_perf.cc  template_test.cc  test.cc  trie_perf.cc  trie_test.cc  v1.cc  v2.cc  v3.cc
src/common/: auth.cc  circuit_breaker.cc  common.cc  compression.cc  config.cc  config_manager.cc  config_template.cc  core.cc  crequest.cc  dispatcher.cc  file_index.cc  filter.cc  http_cache.cc  http_parser.cc  http_service.cc  http_wrapper.tpp  load_balancer.cc  metrics.cc  protocol_detector.cc  rate_limitor.cc  services.cc  services.tpp  string_validator.cc  tcp_proxy.cc
test/go_healthz_server/: main.go
